eks/ingress/ingress-classes.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: public-alb
  annotations:
    ingressclass.kubernetes.io/isdefault-class: "true"
spec:
  controller: ingress.k8s.aws/alb
